# RushXenonNX-Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RushXenonNX/: CMakeLists.txt  function.h  guest_thread.cpp  guest_thread.h  heap.cpp  heap.h  image.cpp  image.h  kernel.cpp  main.cpp  memory.cpp  memory.h  memory_mapped_file.cpp  memory_mapped_file.h  xbox.h  xdbf.h  xdm.h  xex.cpp  xex_patcher.cpp
RushXenonNX/NX/fs/: fs_helpers.cpp  fs_helpers.h
RushXenonNX/NX/log/: nxlogger.cpp  nxlogger.h
RushXenonNX/backups/: memory.cpp  memory.h
RushXenonNXLib/config/: RXN.toml  RXN_switch_tables.toml
